results/SpecGenBench/conversational/log-MoveZeroes-2023_06_27_18_13_08.txt
class MoveZeroes {
    //@ requires nums != null;
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[i] == 0) ==> (\forall int i; 0 <= i && i < \old(nums.length); nums[i] == 0);
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[i] != 0) ==> (\forall int i; 0 <= i && i < \old(nums.length); nums[i] != 0);
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[i] != 0) ==> (\forall int i; 0 <= i && i < nums.length - 1; nums[i] != 0 || nums[i+1] != 0);
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[i] == \old(nums[i]));
    public void moveZeroes(int[] nums) {
        int n = nums.length, left = 0, right = 0;
        //@ maintaining 0 <= left && left <= right && right <= n;
        //@ maintaining (\forall int i; 0 <= i && i < left; nums[i] != 0);
        //@ maintaining (\forall int i; right <= i && i < n; nums[i] == 0);
        //@ decreases n - right;
        while (right < n) {
            if (nums[right] != 0) {
                swap(nums, left, right);
                left++;
            }
            right++;
        }
    }

    //@ requires nums != null;
    //@ requires 0 <= left && left < nums.length;
    //@ requires 0 <= right && right < nums.length;
    //@ ensures nums[left] == \old(nums[right]) && nums[right] == \old(nums[left]);
    public void swap(int[] nums, int left, int right) {
        int temp = nums[left];
        nums[left] = nums[right];
        nums[right] = temp;
    }
}
/home/max/Documents/JMLGPT/tmp/MoveZeroes.java:11: verify: The prover cannot establish an assertion (LoopInvariantBeforeLoop) in method moveZeroes
        //@ maintaining (\forall int i; right <= i && i < n; nums[i] == 0);
            ^
1 verification failure

class MoveZeroes {
    //@ requires nums != null;
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[i] == 0) ==> (\forall int i; 0 <= i && i < \old(nums.length); nums[i] == 0);
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[i] != 0) ==> (\forall int i; 0 <= i && i < \old(nums.length); nums[i] != 0);
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[i] != 0) ==> (\forall int i; 0 <= i && i < nums.length - 1; nums[i] != 0 || nums[i+1] != 0);
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[i] == \old(nums[i]));
    public void moveZeroes(int[] nums) {
        int n = nums.length, left = 0, right = 0;
        //@ maintaining 0 <= left && left <= right && right <= n;
        //@ maintaining (\forall int i; 0 <= i && i < left; nums[i] != 0);
        //@ maintaining (\forall int i; right <= i && i < n; nums[i] == 0);
        //@ decreases n - right;
        while (right < n) {
            //@ maintaining 0 <= left && left <= right && right <= n;
            //@ maintaining (\forall int i; 0 <= i && i < left; nums[i] != 0);
            //@ maintaining (\forall int i; right <= i && i < n; nums[i] == 0);
            //@ decreases n - right;
            if (nums[right] != 0) {
                swap(nums, left, right);
                left++;
            }
            right++;
        }
    }

    //@ requires nums != null;
    //@ requires 0 <= left && left < nums.length;
    //@ requires 0 <= right && right < nums.length;
    //@ ensures nums[left] == \old(nums[right]) && nums[right] == \old(nums[left]);
    public void swap(int[] nums, int left, int right) {
        int temp = nums[left];
        nums[left] = nums[right];
        nums[right] = temp;
    }
}
/home/max/Documents/JMLGPT/tmp/MoveZeroes.java:14: error: Loop specifications must immediately precede a loop statement
            //@ maintaining 0 <= left && left <= right && right <= n;
                ^
1 error

class MoveZeroes {
    //@ requires nums != null;
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[i] == 0) ==> (\forall int i; 0 <= i && i < \old(nums.length); nums[i] == 0);
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[i] != 0) ==> (\forall int i; 0 <= i && i < \old(nums.length); nums[i] != 0);
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[i] != 0) ==> (\forall int i; 0 <= i && i < nums.length - 1; nums[i] != 0 || nums[i+1] != 0);
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[i] == \old(nums[i]));
    public void moveZeroes(int[] nums) {
        int n = nums.length, left = 0, right = 0;
        //@ maintaining 0 <= left && left <= right && right <= n;
        //@ maintaining (\forall int i; 0 <= i && i < left; nums[i] != 0);
        //@ maintaining (\forall int i; right <= i && i < n; nums[i] == 0);
        //@ decreases n - right;
        while (right < n) {
            //@ maintaining 0 <= left && left <= right && right <= n;
            //@ maintaining (\forall int i; 0 <= i && i < left; nums[i] != 0);
            //@ maintaining (\forall int i; right <= i && i < n; nums[i] == 0);
            //@ decreases n - right;
            if (nums[right] != 0) {
                swap(nums, left, right);
                left++;
            }
            right++;
        }
    }

    //@ requires nums != null;
    //@ requires 0 <= left && left < nums.length;
    //@ requires 0 <= right && right < nums.length;
    //@ ensures nums[left] == \old(nums[right]) && nums[right] == \old(nums[left]);
    public void swap(int[] nums, int left, int right) {
        int temp = nums[left];
        nums[left] = nums[right];
        nums[right] = temp;
    }
}
/home/max/Documents/JMLGPT/tmp/MoveZeroes.java:14: error: Loop specifications must immediately precede a loop statement
            //@ maintaining 0 <= left && left <= right && right <= n;
                ^
1 error

